--- a/build.xml
+++ b/build.xml
@@ -69,14 +69,7 @@
         <copy file="${target-dir}/${preprocess-target}" tofile="${site-dir}/${final-target}"/>
     </target>
 
-    <target name="js-document" depends="js-preprocess">
-        <exec executable="yuidoc">
-            <arg value="-c"/>
-            <arg value="yuidoc.json"/>
-        </exec>
-    </target>
-
-    <target name="js-minify" depends="js-document">
+    <target name="js-minify" depends="js-preprocess">
         <exec executable="uglifyjs">
             <arg value="${target-dir}/${preprocess-target}"/>
             <arg value="--mangle"/>
